<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASAPerAndroidInterfaceV3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="asaper">ASAPer</string>
    <string name="assoonaspossible">As Soon As Possible, Everyone Responds</string>
    <string name="firsttextview">Use multiple methods of contact</string>
    <string name="secondtextview">Easily manage many responses</string>
    <string name="thirdtextview">Group and private chat</string>
    <string name="startbuttomtext">Lets get started!</string>
    
    <string name="emailtext">Email</string>
    <string name="passwordtext">Password</string>
    <string name="logintext">Login</string>
    <string name="forgottext">Forgot password?</string>
    <string name="newtext">New? Start here!</string>
    
    <string name="almostdonetext">Almost done!</string>
    <string name="firstline">Before sending your blast, tell us a little bit</string>
    <string name="secondline">about you, so we know how to deliver your</string>
    <string name="thirdline">responses. Let s create your profile</string>
    <string name="nametext">Name</string>
    <string name="donetext">Done</string>
    <string name="phonetext">Phone number</string>
    <string name="secondphonetext">We will verify this phone with you next</string>
    <string name="secondemailtext">We will verify this email with you next</string>
    <string name="blastbutton">Blast</string>
    <string name="manageblastbutton">Manage Blast</string>
    
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="Fragment4">This is Fragment 4</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
 
     <string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
    

</resources>
