
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">


<LinearLayout        
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="horizontal"
    android:layout_marginBottom="20dp"
    android:paddingBottom="20dp"
    android:scrollbarAlwaysDrawHorizontalTrack="true" >
    

        

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/card_separator" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/asapertextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/asaper"
        android:textSize="28sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/assoonaspossibletextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp"
        android:text="@string/assoonaspossible"
        android:textColor="#A1A1A1"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/green_check" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:paddingLeft="8dp"
            android:text="@string/firsttextview" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/green_check" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView4"
            android:paddingLeft="8dp"
            android:text="@string/secondtextview" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/green_check" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView5"
            android:paddingLeft="8dp"
            android:text="@string/thirdtextview" />

        <Button
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/imageView5"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button"
            android:text="@string/startbuttomtext"
            android:textColor="#fff"
            android:onClick="sendViewProfile" />
    
     </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/imageButton2"
        android:layout_alignBottom="@+id/imageButton2"
        android:layout_alignParentLeft="true"
        android:text="Or if you have an account" />

    <Button
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/respond_button_background"
        android:text="Login"
        android:textColor="#fff"
        android:onClick="sendViewLogin"
        android:layout_marginBottom="20dp" />
    
    </RelativeLayout>
    
          
</LinearLayout>

</ScrollView>